--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel serve src/index.html",
-    "build": "parcel build src/index.html",
-    "test": "node tests/*.js"
+    "test": "node tests/nasa-feed.test.js",
+    "build": "npm run test && parcel build src/index.html"
   },
   "browserslist": [
     "last 1 Chrome versions"
